@@ -1,6 +1,8 @@
 \name{bdtPt}
 \alias{bdtPt}
 \alias{Rcpp_bdtPt-class}
+\alias{show,Rcpp_bdtPt-method}
+\alias{format,Rcpp_bdtPt-method}
 \docType{package}
 \title{Rcpp module bdtPt for binding of Boost Date_Time ptime functionality}
 \description{
@@ -13,6 +15,12 @@
   month, day, hour, minute, seconds and fractional seconds.  Fractional
   seconds ought to be at a nano-second granularity; there may be
   platforms not permitting this.
+}
+\section{Method}{
+  \describe{
+    \item{show}{\code{signature(x = "Rcpp_bdtPt")}: prints a (BDTpt) ptime class object}
+    \item{format}{\code{signature(x = "Rcpp_bdtPt")}: formats a (BDTpt) ptime class object}
+  }
 }
 \details{
   Please consult the Boost documentation for (copious) details on the
